--- a/AdivinhaAPalavra/Pages/Index.cshtml
+++ b/AdivinhaAPalavra/Pages/Index.cshtml
@@ -31,7 +31,7 @@
                 @for (int h = 0; h < 5; h++)
                 {
                     string name = "letter_" + h + "_try_" + i;
-                    <input type="text" class="form-control text-uppercase mx-1" id="@name" name="@name" maxlength="1" onkeyup="changeTextBox(@h, @i, event)" style="width: 5em; text-align: center;" @disabled />
+                    <input type="text" autocomplete="off" class="form-control text-uppercase mx-1" id="@name" name="@name" maxlength="1" onkeyup="changeTextBox(@h, @i, event)" style="width: 5em; text-align: center;" @disabled />
                     
                 }
             </div>
@@ -89,6 +89,8 @@
 <script>
     var elementoComFoco = document.activeElement;
 
+    var _correctWord = "";
+
     var _row = 0;
     var _currentLetter = 0;
 
@@ -110,17 +112,20 @@
         }
     }
 
-    function Focus() {
+    async function Load() {
         console.log('O DOM está pronto!');
 
         var name = "letter_0_try_0";
+
+        var matchId = document.getElementById('word').value;
+        _correctWord = btoa(await getWord(matchId));
 
         document.getElementById(name).focus();
         elementoComFoco = document.getElementById(name);
     }
 
     // Adicione um ouvinte de evento para o evento 'DOMContentLoaded'
-    document.addEventListener('DOMContentLoaded', Focus);
+    document.addEventListener('DOMContentLoaded', Load);
 
     function changeTextBox(letter, row, event)
     {
@@ -190,14 +195,16 @@
             return;
         }
 
+        var correctWord = atob(_correctWord);
+
+        correctWord = correctWord.toUpperCase();
+
         if (word.length == 5)
         {
             var matchId = document.getElementById('word').value;
-            var correctWord = await getWord(matchId);
 
             word = word.toUpperCase();
-            correctWord = correctWord.toUpperCase();
-
+            
             var i = 0;
             var correctLetters = [];
             var j = 0;
@@ -290,6 +297,8 @@
                 }
             }
         }
+
+        correctWord = "";
     }
 
     async function checkWordExists(word) {
